tests/ui/layout/unknown-when-ptr-metadata-is-DST.stderr
error[E0080]: the type `str` has an unknown layout
  --> $DIR/unknown-when-ptr-metadata-is-DST.rs:8:16
   |
LL |     [(); { let _a: Option<&str> = None; 0 }];
   |                ^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
